fix: Configurar proxy reverso y corregir autenticación
- Configurar nginx como proxy reverso (/api -> backend:8080)
- Actualizar Login.jsx para usar /api en lugar de localhost:8080
- Configurar CORS en SecurityConfig para permitir credenciales
- Ajustar application.properties para entorno Docker
- Actualizar docker-compose.yml con servicio nginx
- Corregir init.sql para BCrypt en passwords
- Añadir mensaje de error visible en Login